Add form to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <h1>Biglietto</h1>
+    <form id="form" action="">
+        <label for="route-length">Numero di chilometri da percorrere</label>
+        <input id="route-length" type="number">
+
+        <label for="age">Età del passeggero</label>
+        <input id="age" type="number">
+
+        <button>Conferma</button>
+    </form>
 
     <script src="./assets/js/main.js"></script>
 </body>
