Select input elements

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Biglietto</h1>
     <form id="form" action="">
         <label for="route-length">Numero di chilometri da percorrere</label>
-        <input id="route-length" type="number">
+        <input id="route-length-field" type="number">
 
         <label for="age">Età del passeggero</label>
-        <input id="age" type="number">
+        <input id="age-field" type="number">
 
         <button>Conferma</button>
     </form>
