--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Biglietto</h1>
     <form id="form" action="">
-        <label for="route-length">Numero di chilometri da percorrere</label>
-        <input id="route-length-field" type="number">
+        <label for="route-length-field">Numero di chilometri da percorrere</label>
+        <input id="route-length-field" type="number" min="1">
 
-        <label for="age">Età del passeggero</label>
-        <input id="age-field" type="number">
+        <label for="age-field">Età del passeggero</label>
+        <input id="age-field" type="number" min="1" max="150">
 
         <button>Conferma</button>
     </form>
