--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biglietto Treno</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-    <h1>Biglietto</h1>
     <form id="form" action="">
+        <h1>Calcola il prezzo del biglietto</h1>
+
         <label for="route-length-field">Numero di chilometri da percorrere</label>
         <input id="route-length-field" type="number" min="1">
 
@@ -19,6 +26,8 @@
 
         <button>Conferma</button>
     </form>
+
+    <div></div>
 
     <script src="./assets/js/main.js"></script>
 </body>
