On clik update screen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Calcola il prezzo del biglietto</h1>
 
         <label for="name-field">Nome</label>
-        <input id="name-field" type="number" min="1">
+        <input id="name-field" type="text">
 
 
         <label for="route-length-field">Chilometri da percorrere</label>
