--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biglietto Treno</title>
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -14,45 +15,72 @@
 
 </head>
 
-<body>
-    <form id="form" action="">
-        <h1>Calcola il prezzo del biglietto</h1>
+<body class="bg-primary">
+    <div class="container">
+        <form class="row text-center rounded my-5 bg-light-subtle" id="form" action="">
+            <h1 class="my-3">Calcola il prezzo del biglietto</h1>
 
-        <label for="name-field">Nome</label>
-        <input id="name-field" type="text">
+            <div class="col-12 col-md-4">
+                <label for="name-field">Nome</label>
+                <br>
+                <input id="name-field" class="form-control mx-auto w-75" type="text">
+            </div>
 
+            <div class="col-12 col-md-4">
+                <label for="route-length-field">Chilometri da percorrere</label>
+                <br>
+                <input id="route-length-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
+            </div>
 
-        <label for="route-length-field">Chilometri da percorrere</label>
-        <input id="route-length-field" type="number" min="1">
+            <div class="col-12 col-md-4">
+                <label for="age-field">Età del passeggero</label>
+                <br>
+                <input id="age-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
+            </div>
+            <div class="my-3">
+                <button class="btn btn-primary">Conferma</button>
+            </div>
+        </form>
 
-        <label for="age-field">Età del passeggero</label>
-        <input id="age-field" type="number" min="1" max="150">
+        <div id="ticket" class="row gap-1 rounded text-center my-5 bg-light">
+            <h1>Biglietto</h1>
+            <div class="col-12 col-md-3">
+                <p>
+                    Passeggero:
+                    <span id="ticket-name"></span>
+                </p>
 
-        <button>Conferma</button>
-    </form>
+            </div>
+            <div class="col-12 col-md-2">
+                <p>
+                    Offerta:
+                    <span id="price-rate"></span>
+                </p>
 
-    <div id="ticket">
-        <h1>Biglietto</h1>
-        <p>
-            Passeggero:
-            <span id="ticket-name"></span>
-        </p>
-        <p>
-            Offerta:
-            <span id="price-rate"></span>
-        </p>
-        <p>
-            Carrozza:
-            <span id="coach-number"></span>
-        </p>
-        <p>
-            Codice CP:
-            <span id="cp-code"></span>
-        </p>
-        <p>
-            Prezzo:
-            <span id="ticket-price"></span>
-        </p>
+            </div>
+            <div class="col-12 col-md-2">
+                <p>
+                    Carrozza:
+                    <span id="coach-number"></span>
+                </p>
+
+            </div>
+            <div class="col-12 col-md-2">
+                <p>
+                    Codice CP:
+                    <span id="cp-code"></span>
+                </p>
+
+            </div>
+            <div class="col-12 col-md-2">
+                <p>
+                    Prezzo:
+                    <span id="ticket-price"></span>
+                </p>
+
+            </div>
+
+        </div>
 
     </div>
 
