Add cancel button and related logic

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 <br>
                 <input id="age-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
             </div>
+
             <div class="my-3">
-                <button class="btn btn-danger">Conferma</button>
+                <button id="confirm" class="btn btn-danger mx-3">Conferma</button>
+                <button id="cancel" class="btn btn-danger mx-3">Annulla</button>
             </div>
         </form>
 
