--- a/index.html
+++ b/index.html
@@ -20,22 +20,34 @@
         <form class="row text-center rounded my-5 bg-light-subtle" id="form" action="">
             <h1 class="my-3">Calcola il prezzo del biglietto</h1>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-3">
                 <label for="name-field">Nome</label>
                 <br>
                 <input id="name-field" class="form-control mx-auto w-75" type="text">
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-3">
                 <label for="route-length-field">Chilometri da percorrere</label>
                 <br>
                 <input id="route-length-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
             </div>
 
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-3">
                 <label for="age-field">Età del passeggero</label>
                 <br>
                 <input id="age-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
+            </div>
+
+            <div class="col-12 col-md-3">
+                <label for="age-field">Classe</label>
+                <br>
+                <select class="form-control mx-auto w-75" id="class-field" required>
+                    <option value="none">Scegli la classe di servizio</option>
+                    <option value="Standard">Standard</option>
+                    <option value="Business">Business</option>
+                    <option value="Premium">Premium</option>
+                    <option value="Executive">Executive</option>
+                </select>
             </div>
 
             <div class="my-3">
@@ -43,6 +55,7 @@
                 <button id="cancel" class="btn btn-danger mx-3">Annulla</button>
             </div>
         </form>
+        <!-- /form -->
 
         <div class="row gap-1 rounded my-5 bg-light">
             <h1 class="pt-3 ps-3">BIGLIETTO</h1>
@@ -68,8 +81,8 @@
                     Carrozza:
                     <span id="coach-number" class="fw-bold"></span>
                 </p>
-
             </div>
+
             <div class="col-4 p-4">
                 <div class="mx-auto w-75 p-3 rounded-5 text-center align-middle text-white fw-bold bg-danger">
                     <span id="ticket-price" class="fs-5"></span>
@@ -77,7 +90,9 @@
                     <span>Prezzo</span>
                 </div>
             </div>
+
         </div>
+        <!-- /ticket -->
 
     </div>
 
