Add corrections: Show and hide ticket template and validate the inputs.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </form>
         <!-- /form -->
 
-        <div class="row gap-1 rounded my-5 bg-light">
+        <div id="ticket" class="row gap-1 rounded my-5 bg-light d-none">
             <h1 class="pt-3 ps-3">BIGLIETTO</h1>
 
             <div class="col-4 p-4">
