Add correction: add form-label class to label elements

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             <h1 class="my-3">Calcola il prezzo del biglietto</h1>
 
             <div class="col-12 col-md-3">
-                <label for="name-field">Nome</label>
+                <label class="form-label" for="name-field">Nome</label>
                 <br>
                 <input id="name-field" class="form-control mx-auto w-75" type="text">
             </div>
 
             <div class="col-12 col-md-3">
-                <label for="route-length-field">Chilometri da percorrere</label>
+                <label class="form-label" for="route-length-field">Chilometri da percorrere</label>
                 <br>
                 <input id="route-length-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
             </div>
 
             <div class="col-12 col-md-3">
-                <label for="age-field">Età del passeggero</label>
+                <label class="form-label" for="age-field">Età del passeggero</label>
                 <br>
                 <input id="age-field" class="form-control mx-auto w-75" type="text" inputmode="numeric">
             </div>
 
             <div class="col-12 col-md-3">
-                <label for="age-field">Classe</label>
+                <label class="form-label" for="age-field">Classe</label>
                 <br>
                 <select class="form-control mx-auto w-75" id="class-field" required>
                     <option value="none">Scegli la classe di servizio</option>
